@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Pod-Perldoc
-version:             3.14_02
+version:             3.14_03
 abstract:            look up Perl documentation in Pod format
 license:             perl
 generated_by:        ExtUtils::MakeMaker version 6.36
